# cr

./: CODEx_RULES.md  CODEx_TASK.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.migrator  README.md  alembic.ini  pyproject.toml
backend/aiosqlite/: __init__.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0001_initial_schema.py  0002_catalog.py  0003_purchasing_stock.py  0004_users_roles.py  0005_sales.py  0006_cash_receipts.py  0007_sales_cash_registers.py  0008_tenants.py  0009_users_roles_tenant.py  0010_multi_tenant_entities.py
backend/app/: cli.py  main.py  migrator_cli.py
backend/app/api/: __init__.py  auth.py  catalog.py  finance.py  health.py  imports_catalog.py  invitations.py  invitations_utils.py  platform.py  pos.py  public_catalog.py  purchasing.py  reports.py  sales.py  shifts.py  stock.py  tenant_settings.py  users.py
backend/app/core/: config.py  db.py  db_urls.py  db_utils.py  deps.py  security.py  tenancy.py  tokens.py
backend/app/migrations/: __init__.py  tenant_upgrade.py
backend/app/migrator/: __init__.py  __main__.py  main.py
backend/app/models/: __init__.py  cash.py  (+15 more)
backend/migrator_alembic/: env.py
backend/scripts/: check_alembic_branch_labels.py
backend/tests/: test_auth_smoke.py  test_catalog_category_brands.py  test_health_ready.py  test_migration_filenames_match_revision.py  test_migration_revision_ids.py  test_profit_flow.py  test_sales_flow.py  test_tax_service.py  test_tenant_migrations_idempotent.py  test_tenant_migrations_locking.py  test_tenant_resolution.py
(+160 files in other folders)
